--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
-    "@11ty/eleventy": "1.0.0-beta.3"
+    "@11ty/eleventy": "1.0.0-beta.3",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3"
   }
 }
