--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@11ty/eleventy": "1.0.0-beta.3",
     "@11ty/eleventy-img": "^1.0.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3"
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
+    "@11ty/logo": "^2.0.4"
   }
 }
